--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "npm run docs:dev",
-    "docs:dev": "vuepress dev docs-src --no-cache",
+    "docs:dev": "npm run validate && vuepress dev docs-src --no-cache",
     "docs:build": "npm run docs:clean && vuepress build docs-src",
     "docs:serve": "serve --single docs-src/.vuepress/dist",
     "docs:clean": "rimraf docs-src/.vuepress/dist",
     "lint": "eslint --ext .js,.vue ./",
     "deploy": "npm run docs:build && gh-pages -d docs-src/.vuepress/dist",
-    "test": "prettier --check '**/*.{js,vue}'"
+    "test": "prettier --check '**/*.{js,vue}'",
+    "validate": "node ./validators/index.js"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
