--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "docs:dev": "npm run validate && vuepress dev docs-src --no-cache",
     "docs:build": "npm run docs:clean && vuepress build docs-src",
     "docs:serve": "serve --single docs-src/.vuepress/dist",
-    "docs:clean": "rimraf docs-src/.vuepress/dist",
+    "docs:clean": "rimraf docs",
     "lint": "eslint --ext .js,.vue ./",
     "deploy": "npm run docs:build && gh-pages -d docs-src/.vuepress/dist",
     "test": "prettier --check '**/*.{js,vue}'",
